[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ultralitellm"
version = "0.1.0"
description = "A lightweight LLM proxy with test provider fallback."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.6",
]

[project.optional-dependencies]
server = ["uvicorn>=0.29"]
dev = ["pytest>=8", "uvicorn>=0.29", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["ultralitellm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
